--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torch              
-matplotlib        
-pyglet             
-gym                 
-PyVirtualDisplay    
+torch               == 1.9.0
+matplotlib          == 3.5.1
+pyglet              == 1.5.15
+gym                 == 0.21.0
+PyVirtualDisplay    == 3.0
